<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_teams">

    <fragment
        android:id="@id/navigation_my_matches"
        android:name="com.noam.ftcscouting.ui.myMatches.MyMatchesFragment"
        android:label="@string/title_my_matches"
        tools:layout="@layout/fragment_my_matches" />

    <fragment
        android:id="@+id/navigation_teams"
        android:name="com.noam.ftcscouting.ui.teams.TeamsFragment"
        android:label="@string/title_teams"
        tools:layout="@layout/fragment_teams" />

    <fragment
        android:id="@+id/navigation_ranks"
        android:name="com.noam.ftcscouting.ui.ranks.RanksFragment"
        android:label="@string/title_ranks"
        tools:layout="@layout/fragment_ranks" />
</navigation>