<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_events">

    <fragment
        android:id="@+id/navigation_stats"
        android:name="com.noam.ftcscouting.ui.stats.StatsFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/fragment_stats">
    </fragment>

    <fragment
        android:id="@+id/navigation_events"
        android:name="com.noam.ftcscouting.ui.events.EventsFragment"
        android:label="@string/title_events"
        tools:layout="@layout/fragment_events">
    </fragment>

    <fragment
        android:id="@+id/navigation_self_scoring"
        android:name="com.noam.ftcscouting.ui.selfScoring.SelfScoringFragment"
        android:label="@string/title_self_scoring"
        tools:layout="@layout/fragment_self_scoring">
    </fragment>
</navigation>