<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_border">

    <TextView
        android:id="@+id/rank"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/right_border"
        android:paddingStart="@dimen/half"
        android:paddingTop="@dimen/half"
        android:text="#1"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/teamName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half"
        android:paddingStart="@dimen/half"
        android:text="PlanTech #17106"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/scoreContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scoreContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/half"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/teamName">

        <TextView
            android:id="@+id/autoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half"
            android:text="@string/auto_score"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/autoScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half"
            android:text="0.00"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/autoTitle"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/teleOpTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half"
            android:text="@string/teleop_score"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/autoTitle" />

        <TextView
            android:id="@+id/teleOpScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half"
            android:text="0.00"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/teleOpTitle"
            app:layout_constraintTop_toTopOf="@id/teleOpTitle" />

        <TextView
            android:id="@+id/penaltyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half"
            android:text="@string/penalty"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/teleOpTitle" />

        <TextView
            android:id="@+id/penaltyScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half"
            android:text="0.00"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/penaltyTitle"
            app:layout_constraintTop_toTopOf="@id/penaltyTitle" />

        <TextView
            android:id="@+id/deleteMatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/full"
            android:text="❌"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/penaltyScore"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>